kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: products-namespace
  labels:
    name: products-namespace
