kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-app
  namespace: products-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-app
  template:
    metadata:
      labels:
        app: products-app
    spec:
      containers:
        - name: products-app
          image: nikolovaradica/products-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
