kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-app-service
  namespace: products-namespace
spec:
  selector:
    app: products-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
