kubernetes/statefulset.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: products-db
  namespace: products-namespace
spec:
  serviceName: products-db
  replicas: 1
  selector:
    matchLabels:
      app: products-db
  template:
    metadata:
      labels:
        app: products-db
        namespace: products-namespace
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgres-port
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: products-db-service
  namespace: products-namespace
spec:
  selector:
    app: products-db
  ports:
    - protocol: TCP
      port: 5432
