kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-app-ingress
  namespace: products-namespace
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
    - host: products.finki.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: products-app-service
                port:
                  number: 8080
